Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanInteger.quorum
boolean bool = cast(boolean, 5)