Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignObjectInteger.quorum
Object o = cast(Object, 5)